--- a/pixi.toml
+++ b/pixi.toml
@@ -4,7 +4,6 @@ channels = [
   "https://prefix.dev/meta-forge",
   "conda-forge",
 ]
-
 name = "verl"
 platforms = ["linux-64"]
 version = "0.1.0"
@@ -13,11 +12,14 @@ version = "0.1.0"
 
 
 [system-requirements]
-cuda = "12.4"
+cuda = "12.7"
+libc = { family = "glibc", version = "2.28" }
 
 
 [dependencies]
 python = "3.10.*"
+cuda = "12.6.*"
+pytorch = { version = "==2.6.0", build = "*cuda*" }
 accelerate = "*"
 codetiming = "*"
 datasets = "*"
@@ -37,9 +39,9 @@ vllm = ">=0.7.3"
 wandb = "*"
 ray-default = "*"
 tensorboard = ">=2.19.0,<3"
+liger-kernel = "*"
+verl = "*"
 
 [pypi-dependencies]
-liger-kernel = "*"
 mathruler = "*"
-verl = { path = ".", editable = true }
 
