feat: use verl in project

--- a/pixi.toml
+++ b/pixi.toml
@@ -1,9 +1,6 @@
 [workspace]
 authors = ["Linh-Ice <1471580435@qq.com>"]
-channels = [
-  "https://prefix.dev/meta-forge",
-  "conda-forge",
-]
+channels = ["https://prefix.dev/meta-forge", "conda-forge"]
 name = "verl"
 platforms = ["linux-64"]
 version = "0.1.0"
@@ -40,8 +37,7 @@ wandb = "*"
 ray-default = "*"
 tensorboard = ">=2.19.0,<3"
 liger-kernel = "*"
-verl = "*"
 
 [pypi-dependencies]
 mathruler = "*"
-
+verl = { path = ".", editable = true }
